add edit method

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 ##################################
 ####### DATABASE CREDENTIALS #####
 DBHOST=localhost
-DBNAME=alcool
-USERNAME=alcooluser
+DBNAME=philosofy
+USERNAME=philosofyuser
 PASSWORD=postgres
 #################################
 #################################
