--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "prefer-stable": true,
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.1",
+      "ext-ctype": "*"
     }
     }
