--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
-      "ext-ctype": "*"
+      "ext-ctype": "*",
+      "ext-readline": "*"
     }
     }
