--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": ">=8.1",
       "ext-ctype": "*",
-      "ext-readline": "*"
+      "ext-readline": "*",
+      "ext-yaml": "*"
     }
     }
