--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
             "email": "thibautstachnick@gmail.com"
         }
     ],
-    "prefer-stable": false,
+    "prefer-stable": true,
     "require": {
         "php": ">=8.1",
       "ext-ctype": "*",
