update composer for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ttst49/frameworkb2esd",
+    "name": "ttst49/philosofy",
     "description": "php framework",
     "type": "project",
     "license": "MIT",
